comments and readability

--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -1,5 +1,5 @@
 [cookie]
-path = ~/private/devcookie.txt
+path = /private/devcookie.txt
 
 [exclude]
 list = _design/lucene, _design/requests, _design/unique, _design/crap, _design/chained_requests, _design/chained_campaigns, _design/campaigns, _design/stats
