correct parsing of specific fields

--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -1,5 +1,5 @@
 [cookie]
-path = /private/devcookie.txt
+path = /private/adpolcookie.txt
 
 [exclude]
 list = _design/lucene, _design/requests, _design/unique, _design/crap, _design/chained_requests, _design/chained_campaigns, _design/campaigns, _design/stats
@@ -9,7 +9,7 @@ list = _id, _rev, action_parameters, alias, allowed_campaigns, analysis_id, appr
 
 [chained_campaigns]
 pmp_db_index = chained_campaigns/
-pmp_db = chain_campaign/
+pmp_db = chained_campaign/
 last_seq = seq/last_seq
 mapping = {"properties":{"campaigns": {"type": "string","index": "not_analyzed"}}}
 db_source = https://cms-pdmv-dev.cern.ch/mcm/
@@ -17,7 +17,7 @@ db = admin/chained_campaigns/
 
 [chained_requests]
 pmp_db_index = chained_requests/
-pmp_db = chain_request/
+pmp_db = chained_request/
 last_seq = seq/last_seq
 mapping = {"properties":{"member_of_campaign": {"type": "string","index": "not_analyzed"}}}
 db_source = https://cms-pdmv-dev.cern.ch/mcm/
