--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -1,51 +1,53 @@
 [cookie]
-path = /private/adpolcookie.txt
+path = /private/acookie.txt
 
 [exclude]
 list = _design/lucene, _design/requests, _design/unique, _design/crap, _design/chained_requests, _design/chained_campaigns, _design/campaigns, _design/stats
 
-[remove_params]
-list = _id, _rev, action_parameters, alias, allowed_campaigns, analysis_id, approval, block_black_list, block_white_list, cmssw_release, config_id, content, dataset_name, energy, extension, flown_with, fragment, fragment_tag, generators, generator_parameters, input_dataset, keep_output, last_status, name_of_fragment, notes, mcdb_id, memory, member_of_chain, pileup_dataset_name, process_string, request_parameters, sequences, size_event, tags, type, valid, validation, version, pdmv_all_jobs, pdmv_assigned_sites, pdmv_at_T2, pdmv_at_T3, pdmv_campaign, pdmv_completion_eta_in_DAS, pdmv_completion_in_DAS, pdmv_configs, pdmv_custodial_sites, pdmv_dataset_statuses, pdmv_expected_events_per_ds, pdmv_input_dataset, pdmv_pending_jobs, pdmv_performance, pdmv_present_priority, pdmv_priority, pdmv_request, pdmv_running_days, pdmv_running_jobs, pdmv_running_sites, pdmv_status, pdmv_status_from_reqmngr, pdmv_status_in_DAS, pdmv_submission_date, pdmv_submission_time, pdvm_monitor_history, www
-
 [chained_campaigns]
-pmp_db_index = chained_campaigns/
-pmp_db = chained_campaign/
+db = admin/chained_campaigns/
+db_source = https://cms-pdmv-dev.cern.ch/mcm/
+fetch_fields = campaigns, prepid
 last_seq = seq/last_seq
 mapping = {"properties":{"campaigns": {"type": "string","index": "not_analyzed"}}}
-db_source = https://cms-pdmv-dev.cern.ch/mcm/
-db = admin/chained_campaigns/
+pmp_db = chained_campaign/
+pmp_db_index = chained_campaigns/
 
 [chained_requests]
-pmp_db_index = chained_requests/
-pmp_db = chained_request/
+db = admin/chained_requests/
+db_source = https://cms-pdmv-dev.cern.ch/mcm/
+fetch_fields = chain, member_of_campaign, prepid, step
 last_seq = seq/last_seq
 mapping = {"properties":{"member_of_campaign": {"type": "string","index": "not_analyzed"}}}
-db_source = https://cms-pdmv-dev.cern.ch/mcm/
-db = admin/chained_requests/
+pmp_db = chained_request/
+pmp_db_index = chained_requests/
 
 [requests]
-pmp_db_index = requests/
-pmp_db = request/
+db = admin/requests/
+db_source = https://cms-pdmv-dev.cern.ch/mcm/
+fetch_fields = completed_events, efficiency, history, member_of_campaign, output_dataset, prepid, priority, pwg, reqmgr_name, status, time_event, total_events
 last_seq = seq/last_seq
 mapping = {"properties":{"member_of_campaign": {"type": "string","index": "not_analyzed"}}}
-db_source = https://cms-pdmv-dev.cern.ch/mcm/
-db = admin/requests/
+pmp_db = request/
+pmp_db_index = requests/
 
 [campaigns]
-pmp_db_index = campaigns/
-pmp_db = campaign/
+db = admin/campaigns/
+db_source = https://cms-pdmv-dev.cern.ch/mcm/
+fetch_fields = prepid
 last_seq = seq/last_seq
 mapping = 
-db_source = https://cms-pdmv-dev.cern.ch/mcm/
-db = admin/campaigns/
+pmp_db = campaign/
+pmp_db_index = campaigns/
 
 [stats]
-pmp_db_index = stats/
-pmp_db = stats/
+db = admin/stats/
+db_source = https://cms-pdmv-dev.cern.ch/stats/
+fetch_fields = pdmv_dataset_name, pdmv_expected_events, pdmv_monitor_history, pdmv_monitor_taskchain, pdmv_prep_id, pdmv_request_name, pdmv_type
 last_seq = seq/last_seq
 mapping = {"properties":{"pdmv_prep_id": {"type": "string","index": "not_analyzed"}}}
-db_source = https://cms-pdmv-dev.cern.ch/stats/
-db = admin/stats/
+pmp_db_index = stats/
+pmp_db = stats/
 
 [general]
 pmp = http://localhost:9200/
