--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -6,7 +6,7 @@ list = _design/lucene, _design/requests, _design/unique, _design/crap, _design/c
 
 [chained_campaigns]
 db = admin/chained_campaigns/
-db_source = https://cms-pdmv-dev.cern.ch/mcm/
+db_source = https://cms-pdmv.cern.ch/mcm/
 fetch_fields = campaigns, prepid
 last_seq = seq/last_seq
 mapping = {"properties":{"campaigns": {"type": "string","index": "not_analyzed"}}}
@@ -15,7 +15,7 @@ pmp_db_index = chained_campaigns/
 
 [chained_requests]
 db = admin/chained_requests/
-db_source = https://cms-pdmv-dev.cern.ch/mcm/
+db_source = https://cms-pdmv.cern.ch/mcm/
 fetch_fields = chain, member_of_campaign, prepid, step
 last_seq = seq/last_seq
 mapping = {"properties":{"member_of_campaign": {"type": "string","index": "not_analyzed"}}}
@@ -24,7 +24,7 @@ pmp_db_index = chained_requests/
 
 [requests]
 db = admin/requests/
-db_source = https://cms-pdmv-dev.cern.ch/mcm/
+db_source = https://cms-pdmv.cern.ch/mcm/
 fetch_fields = completed_events, efficiency, history, member_of_campaign, output_dataset, prepid, priority, pwg, reqmgr_name, status, time_event, total_events
 last_seq = seq/last_seq
 mapping = {"properties":{"member_of_campaign": {"type": "string","index": "not_analyzed"}}}
@@ -33,7 +33,7 @@ pmp_db_index = requests/
 
 [campaigns]
 db = admin/campaigns/
-db_source = https://cms-pdmv-dev.cern.ch/mcm/
+db_source = https://cms-pdmv.cern.ch/mcm/
 fetch_fields = prepid
 last_seq = seq/last_seq
 mapping = 
@@ -42,8 +42,8 @@ pmp_db_index = campaigns/
 
 [stats]
 db = admin/stats/
-db_source = https://cms-pdmv-dev.cern.ch/stats/
-fetch_fields = pdmv_dataset_name, pdmv_expected_events, pdmv_monitor_history, pdmv_monitor_taskchain, pdmv_prep_id, pdmv_request_name, pdmv_type
+db_source = https://cms-pdmv.cern.ch/stats/
+fetch_fields = pdmv_dataset_name, pdmv_expected_events, pdmv_monitor_history, pdmv_monitor_datasets, pdmv_prep_id, pdmv_request_name, pdmv_type
 last_seq = seq/last_seq
 mapping = {"properties":{"pdmv_prep_id": {"type": "string","index": "not_analyzed"}}}
 pmp_db_index = stats/
