--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -2,7 +2,7 @@
 path = /private/acookie.txt
 
 [exclude]
-list = _design/lucene, _design/requests, _design/unique, _design/crap, _design/chained_requests, _design/chained_campaigns, _design/campaigns, _design/stats
+list = _design/lucene, _design/requests, _design/unique, _design/crap, _design/chained_requests, _design/chained_campaigns, _design/campaigns, _design/stats, _design/flows
 
 [chained_campaigns]
 db = admin/chained_campaigns/
@@ -25,9 +25,9 @@ pmp_db_index = chained_requests/
 [requests]
 db = admin/requests/
 db_source = https://cms-pdmv.cern.ch/mcm/
-fetch_fields = completed_events, efficiency, history, member_of_campaign, output_dataset, prepid, priority, pwg, reqmgr_name, status, time_event, total_events
+fetch_fields = completed_events, efficiency, history, member_of_campaign, output_dataset, prepid, priority, pwg, reqmgr_name, status, time_event, total_events, flown_with
 last_seq = seq/last_seq
-mapping = {"properties":{"member_of_campaign": {"type": "string","index": "not_analyzed"}}}
+mapping = {"properties":{"member_of_campaign": {"type": "string","index": "not_analyzed"}}, {"flown_with": {"type": "string","index": "not_analyzed"}}}
 pmp_db = request/
 pmp_db_index = requests/
 
@@ -39,6 +39,15 @@ last_seq = seq/last_seq
 mapping = 
 pmp_db = campaign/
 pmp_db_index = campaigns/
+
+[flows]
+db = admin/flows/
+db_source = https://cms-pdmv.cern.ch/mcm/
+fetch_fields = prepid
+last_seq = seq/last_seq
+mapping = 
+pmp_db = flow/
+pmp_db_index = flows/
 
 [stats]
 db = admin/stats/
