--- a/pmp/package.json
+++ b/pmp/package.json
@@ -20,6 +20,7 @@
     "grunt": "^0.4.5"
   },
   "devDependencies": {
+    "bower": "^1.4.1",
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "^0.12.3",
