--- a/pmp/static/bower.json
+++ b/pmp/static/bower.json
@@ -16,10 +16,10 @@
     "tests"
   ],
   "dependencies": {
-    "angular-animate": "~1.4.3",
+    "angular-animate": "~1.3.16",
     "angular-bootstrap": "~0.13.1",
-    "angular-route": "~1.4.3",
-    "angular": "1.3.16",
+    "angular-route": "~1.3.16",
+    "angular": "1.3.17",
     "animate.css": "~3.3.0",
     "bootstrap": "~3.3.5",
     "d3": "~3.5.6",
@@ -27,5 +27,8 @@
     "jquery-sortable": "~0.9.13",
     "jquery": "~2.1.4",
     "zeroclipboard": "~2.2.0"
+  },
+  "resolutions": {
+    "angular": "1.3.17"
   }
 }
