Fix JSON format in fetchd/dev.conf

--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -1,5 +1,5 @@
 [cookie]
-path = /private/acookie.txt
+path = /private/mycookie.txt
 
 [exclude]
 list = _design/lucene, _design/requests, _design/unique, _design/crap, _design/chained_requests, _design/chained_campaigns, _design/campaigns, _design/stats, _design/flows
@@ -27,7 +27,7 @@ db = admin/requests/
 db_source = https://cms-pdmv.cern.ch/mcm/
 fetch_fields = completed_events, efficiency, history, member_of_campaign, output_dataset, prepid, priority, pwg, reqmgr_name, status, time_event, total_events, flown_with
 last_seq = seq/last_seq
-mapping = {"properties":{"member_of_campaign": {"type": "string","index": "not_analyzed"}}, {"flown_with": {"type": "string","index": "not_analyzed"}}}
+mapping = {"properties":{"member_of_campaign": {"type": "string","index": "not_analyzed"}, "flown_with": {"type": "string","index": "not_analyzed"}}}
 pmp_db = request/
 pmp_db_index = requests/
 
