Modify fetchd.py and dev.conf to create fake ReReco Elastic indices

--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -58,6 +58,24 @@ mapping = {"properties":{"pdmv_prep_id": {"type": "string","index": "not_analyze
 pmp_db_index = stats/
 pmp_db = stats/
 
+[rereco_campaigns]
+mapping =
+db =
+db_source =
+fetch_fields =
+last_seq = seq/last_seq
+pmp_db_index = rereco_campaigns/
+pmp_db = rereco_campaign/
+
+[rereco_requests]
+mapping = {"properties":{"member_of_campaign": {"type": "string","index": "not_analyzed"}}}
+db =
+db_source =
+fetch_fields =
+last_seq = seq/last_seq
+pmp_db_index = rereco_requests/
+pmp_db = rereco_request/
+
 [general]
 pmp = http://localhost:9200/
 db_query_changes = _changes?since
