--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -58,14 +58,14 @@ mapping = {"properties":{"pdmv_prep_id": {"type": "string","index": "not_analyze
 pmp_db_index = stats/
 pmp_db = stats/
 
-[rereco_campaigns]
+[processing_strings]
 mapping =
 db =
 db_source =
 fetch_fields =
 last_seq = seq/last_seq
-pmp_db_index = rereco_campaigns/
-pmp_db = rereco_campaign/
+pmp_db_index = processing_strings/
+pmp_db = processing_strings/
 
 [rereco_requests]
 mapping = {"properties":{"member_of_campaign": {"type": "string","index": "not_analyzed"}}}
