Add reqmgr domain and path to dev.conf and Config class

--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -76,6 +76,10 @@ last_seq = seq/last_seq
 pmp_db_index = rereco_requests/
 pmp_db = rereco_request/
 
+[reqmgr]
+domain = https://cmsweb.cern.ch/
+path = couchdb/reqmgr_workload_cache/
+
 [general]
 pmp = http://localhost:9200/
 db_query_changes = _changes?since
