Do some messy stuff to allow querying production request manager in dev

--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -78,6 +78,7 @@ pmp_db = rereco_request/
 
 [reqmgr]
 domain = https://cmsweb.cern.ch/
+domain_backup =
 path = couchdb/reqmgr_workload_cache/
 
 [general]
