Fix connections to reqmgr and resolve errors with it more nicely in fetchd.py
Also return response from httpget in utils.py

--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -77,9 +77,9 @@ pmp_db_index = rereco_requests/
 pmp_db = rereco_request/
 
 [reqmgr]
-domain = https://cmsweb.cern.ch/
+domain = cmsweb.cern.ch
 domain_backup =
-path = couchdb/reqmgr_workload_cache/
+path = /couchdb/reqmgr_workload_cache/
 
 [general]
 pmp = http://localhost:9200/
