Switch processing_string_provider.py to using the Requests library

--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -77,9 +77,8 @@ pmp_db_index = rereco_requests/
 pmp_db = rereco_request/
 
 [reqmgr]
-domain = cmsweb.cern.ch
-domain_backup =
-path = /couchdb/reqmgr_workload_cache/
+url = https://cmsweb.cern.ch/couchdb/reqmgr_workload_cache/
+backup_url = https://cmsweb-testbed.cern.ch/couchdb/reqmgr_workload_cache/
 
 [general]
 pmp = http://localhost:9200/
