processing_strings -> processing_string in dev.conf

--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -65,7 +65,7 @@ db_source =
 fetch_fields =
 last_seq = seq/last_seq
 pmp_db_index = processing_strings/
-pmp_db = processing_strings/
+pmp_db = processing_string/
 
 [rereco_requests]
 mapping = {"properties":{"member_of_campaign": {"type": "string","index": "not_analyzed"}}}
