--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -52,7 +52,7 @@ pmp_db_index = flows/
 [stats]
 db = admin/stats/
 db_source = https://cms-pdmv.cern.ch/stats/
-fetch_fields = pdmv_dataset_name, pdmv_expected_events, pdmv_monitor_history, pdmv_monitor_datasets, pdmv_prep_id, pdmv_request_name, pdmv_type
+fetch_fields = pdmv_dataset_name, pdmv_expected_events, pdmv_monitor_history, pdmv_monitor_datasets, pdmv_prep_id, pdmv_request_name, pdmv_type, rereco_preferred_dataset
 last_seq = seq/last_seq
 mapping = {"properties":{"pdmv_prep_id": {"type": "string","index": "not_analyzed"}}}
 pmp_db_index = stats/
