Adjust number of expected events if request was force completed

--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -25,7 +25,7 @@ pmp_db_index = chained_requests/
 [requests]
 db = admin/requests/
 db_source = https://cms-pdmv.cern.ch/mcm/
-fetch_fields = completed_events, efficiency, history, member_of_campaign, output_dataset, prepid, priority, pwg, reqmgr_name, status, time_event, total_events, flown_with, member_of_chain
+fetch_fields = completed_events, efficiency, history, member_of_campaign, output_dataset, prepid, priority, pwg, reqmgr_name, status, time_event, total_events, flown_with, member_of_chain, reqmgr_status_history
 last_seq = seq/last_seq
 mapping = {"properties":{"member_of_campaign": {"type": "string","index": "not_analyzed"}, "flown_with": {"type": "string","index": "not_analyzed"}}}
 pmp_db = request/
