Update fetchd files for elastic search 6

--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -8,8 +8,8 @@ list = _design/lucene, _design/requests, _design/unique, _design/crap, _design/c
 db = admin/chained_campaigns/
 db_source = https://cms-pdmv.cern.ch/mcm/
 fetch_fields = campaigns, prepid
-last_seq = seq/last_seq
-mapping = {"properties":{"campaigns": {"type": "string","index": "not_analyzed"}}}
+last_seq = chained_campaigns
+mapping = {"properties": {"campaigns": {"type": "keyword", "index": false}, "prepid": {"type": "keyword"}}}
 pmp_db = chained_campaign/
 pmp_db_index = chained_campaigns/
 
@@ -17,8 +17,8 @@ pmp_db_index = chained_campaigns/
 db = admin/chained_requests/
 db_source = https://cms-pdmv.cern.ch/mcm/
 fetch_fields = chain, member_of_campaign, prepid, step
-last_seq = seq/last_seq
-mapping = {"properties":{"member_of_campaign": {"type": "string","index": "not_analyzed"}}}
+last_seq = chained_requests
+mapping = {"properties": {"chain": {"type":"keyword"}, "member_of_campaign": {"type": "keyword", "index": false}, "prepid": {"type":"keyword"}, "step": {"type": "long"}}}
 pmp_db = chained_request/
 pmp_db_index = chained_requests/
 
@@ -26,8 +26,8 @@ pmp_db_index = chained_requests/
 db = admin/requests/
 db_source = https://cms-pdmv.cern.ch/mcm/
 fetch_fields = completed_events, efficiency, history, member_of_campaign, output_dataset, prepid, priority, pwg, reqmgr_name, status, time_event, total_events, flown_with, member_of_chain, reqmgr_status_history
-last_seq = seq/last_seq
-mapping = {"properties":{"member_of_campaign": {"type": "string","index": "not_analyzed"}, "flown_with": {"type": "string","index": "not_analyzed"}}}
+last_seq = requests
+mapping = {"properties": {"completed_events": {"type": "long"}, "efficiency": {"type": "double"}, "flown_with": {"type": "keyword", "index": false}, "history": {"properties": {"action": {"type": "keyword"}, "time": {"type": "keyword"}}}, "member_of_campaign": {"type": "keyword", "index": false}, "member_of_chain": {"type": "keyword"}, "output_dataset": {"type": "keyword"}, "prepid": {"type": "keyword"}, "priority": {"type": "long"}, "pwg": {"type": "keyword"}, "reqmgr_name": {"type": "keyword"}, "status": {"type": "keyword"}, "time_event": {"type": "double"}, "total_events": {"type": "long"}}}
 pmp_db = request/
 pmp_db_index = requests/
 
@@ -35,8 +35,8 @@ pmp_db_index = requests/
 db = admin/campaigns/
 db_source = https://cms-pdmv.cern.ch/mcm/
 fetch_fields = prepid
-last_seq = seq/last_seq
-mapping = 
+last_seq = campaigns
+mapping = {"properties": {"prepid": {"type": "keyword"}}}
 pmp_db = campaign/
 pmp_db_index = campaigns/
 
@@ -44,17 +44,17 @@ pmp_db_index = campaigns/
 db = admin/flows/
 db_source = https://cms-pdmv.cern.ch/mcm/
 fetch_fields = prepid
-last_seq = seq/last_seq
-mapping = 
+last_seq = flows
+mapping = {"properties": {"prepid": {"type": "keyword"}}}
 pmp_db = flow/
 pmp_db_index = flows/
 
 [stats]
-db = admin/stats/
+db = stats/
 db_source = https://cms-pdmv.cern.ch/stats/
 fetch_fields = pdmv_dataset_name, pdmv_expected_events, pdmv_monitor_history, pdmv_monitor_datasets, pdmv_prep_id, pdmv_request_name, pdmv_type, rereco_preferred_dataset
-last_seq = seq/last_seq
-mapping = {"properties":{"pdmv_prep_id": {"type": "string","index": "not_analyzed"}}}
+last_seq = stats
+mapping = {"properties": {"pdmv_dataset_name": {"type": "keyword"}, "pdmv_expected_events": {"type": "long"}, "pdmv_monitor_datasets": {"properties": {"dataset": {"type": "keyword"}, "monitor": {"properties": {"pdmv_evts_in_DAS": {"type": "long"}, "pdmv_monitor_time": {"type": "keyword"}, "pdmv_open_evts_in_DAS": {"type": "long"}}}}}, "pdmv_monitor_history": {"properties": {"pdmv_evts_in_DAS": {"type": "long"}, "pdmv_monitor_time": {"type": "keyword"}, "pdmv_open_evts_in_DAS": {"type": "long"}}}, "pdmv_prep_id": {"type": "keyword", "index": false}, "pdmv_request_name": {"type": "keyword"}, "pdmv_type": {"type": "keyword"}, "rereco_preferred_dataset": {"type": "keyword"}}}
 pmp_db_index = stats/
 pmp_db = stats/
 
@@ -63,16 +63,16 @@ mapping =
 db =
 db_source =
 fetch_fields =
-last_seq = seq/last_seq
+last_seq = processing_strings
 pmp_db_index = processing_strings/
 pmp_db = processing_string/
 
 [rereco_requests]
-mapping = {"properties":{"member_of_campaign": {"type": "string","index": "not_analyzed"}}}
+mapping = {"properties": {"completed_events": {"type": "long"}, "history": {"properties": {"action": {"type": "keyword"}, "time": {"type": "keyword"}}}, "member_of_campaign": {"type": "keyword", "index": false}, "output_dataset": {"type": "keyword"}, "pdmv_status": {"type": "keyword"}, "prepid": {"type": "keyword"}, "priority": {"type": "long"}, "reqmgr_name": {"type": "keyword"}, "status": {"type": "keyword"}, "status_from_reqmngr": {"type": "keyword"}, "status_in_DAS": {"type": "keyword"}, "total_events": {"type": "long"}}}
 db =
 db_source =
 fetch_fields =
-last_seq = seq/last_seq
+last_seq = rereco_requests
 pmp_db_index = rereco_requests/
 pmp_db = rereco_request/
 
@@ -85,3 +85,13 @@ pmp = http://localhost:9200/
 db_query_changes = _changes?since
 db_query_first = _changes?limit=0&descending=true
 db_query_all_doc = _all_docs
+last_sequences = last_sequences/last_seq/
+
+[last_seq]
+db =
+db_source =
+fetch_fields =
+mapping = {"properties": {"time": {"type": "long"}, "val": {"type": "keyword"}}}
+pmp_db =
+pmp_db_index =
+last_seq =
