Update mapping, add requirements.txt

--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -9,7 +9,7 @@ db = admin/chained_campaigns/
 db_source = https://cms-pdmv.cern.ch/mcm/
 fetch_fields = campaigns, prepid
 last_seq = chained_campaigns
-mapping = {"properties": {"campaigns": {"type": "keyword", "index": false}, "prepid": {"type": "keyword"}}}
+mapping = {"properties": {"campaigns": {"type": "keyword", "analyzer": "keyword"}}}
 pmp_db = chained_campaign/
 pmp_db_index = chained_campaigns/
 
@@ -18,7 +18,7 @@ db = admin/chained_requests/
 db_source = https://cms-pdmv.cern.ch/mcm/
 fetch_fields = chain, member_of_campaign, prepid, step
 last_seq = chained_requests
-mapping = {"properties": {"chain": {"type":"keyword"}, "member_of_campaign": {"type": "keyword", "index": false}, "prepid": {"type":"keyword"}, "step": {"type": "long"}}}
+mapping = {"properties": {"member_of_campaign": {"type": "keyword", "analyzer": "keyword"}}}
 pmp_db = chained_request/
 pmp_db_index = chained_requests/
 
@@ -27,7 +27,7 @@ db = admin/requests/
 db_source = https://cms-pdmv.cern.ch/mcm/
 fetch_fields = completed_events, efficiency, history, member_of_campaign, output_dataset, prepid, priority, pwg, reqmgr_name, status, time_event, total_events, flown_with, member_of_chain, reqmgr_status_history
 last_seq = requests
-mapping = {"properties": {"completed_events": {"type": "long"}, "efficiency": {"type": "double"}, "flown_with": {"type": "keyword", "index": false}, "history": {"properties": {"action": {"type": "keyword"}, "time": {"type": "keyword"}}}, "member_of_campaign": {"type": "keyword", "index": false}, "member_of_chain": {"type": "keyword"}, "output_dataset": {"type": "keyword"}, "prepid": {"type": "keyword"}, "priority": {"type": "long"}, "pwg": {"type": "keyword"}, "reqmgr_name": {"type": "keyword"}, "status": {"type": "keyword"}, "time_event": {"type": "double"}, "total_events": {"type": "long"}}}
+mapping = {"properties": {"member_of_campaign": {"type": "keyword", "analyzer": "keyword"}, "flown_with": {"type": "keyword", "analyzer": "keyword"}}}
 pmp_db = request/
 pmp_db_index = requests/
 
@@ -36,7 +36,7 @@ db = admin/campaigns/
 db_source = https://cms-pdmv.cern.ch/mcm/
 fetch_fields = prepid
 last_seq = campaigns
-mapping = {"properties": {"prepid": {"type": "keyword"}}}
+mapping = 
 pmp_db = campaign/
 pmp_db_index = campaigns/
 
@@ -45,7 +45,7 @@ db = admin/flows/
 db_source = https://cms-pdmv.cern.ch/mcm/
 fetch_fields = prepid
 last_seq = flows
-mapping = {"properties": {"prepid": {"type": "keyword"}}}
+mapping = 
 pmp_db = flow/
 pmp_db_index = flows/
 
@@ -54,7 +54,7 @@ db = stats/
 db_source = https://cms-pdmv.cern.ch/stats/
 fetch_fields = pdmv_dataset_name, pdmv_expected_events, pdmv_monitor_history, pdmv_monitor_datasets, pdmv_prep_id, pdmv_request_name, pdmv_type, rereco_preferred_dataset
 last_seq = stats
-mapping = {"properties": {"pdmv_dataset_name": {"type": "keyword"}, "pdmv_expected_events": {"type": "long"}, "pdmv_monitor_datasets": {"properties": {"dataset": {"type": "keyword"}, "monitor": {"properties": {"pdmv_evts_in_DAS": {"type": "long"}, "pdmv_monitor_time": {"type": "keyword"}, "pdmv_open_evts_in_DAS": {"type": "long"}}}}}, "pdmv_monitor_history": {"properties": {"pdmv_evts_in_DAS": {"type": "long"}, "pdmv_monitor_time": {"type": "keyword"}, "pdmv_open_evts_in_DAS": {"type": "long"}}}, "pdmv_prep_id": {"type": "keyword", "index": false}, "pdmv_request_name": {"type": "keyword"}, "pdmv_type": {"type": "keyword"}, "rereco_preferred_dataset": {"type": "keyword"}}}
+mapping = {"properties":{"pdmv_prep_id": {"type": "keyword", "analyzer": "keyword"}}}
 pmp_db_index = stats/
 pmp_db = stats/
 
@@ -68,7 +68,7 @@ pmp_db_index = processing_strings/
 pmp_db = processing_string/
 
 [rereco_requests]
-mapping = {"properties": {"completed_events": {"type": "long"}, "history": {"properties": {"action": {"type": "keyword"}, "time": {"type": "keyword"}}}, "member_of_campaign": {"type": "keyword", "index": false}, "output_dataset": {"type": "keyword"}, "pdmv_status": {"type": "keyword"}, "prepid": {"type": "keyword"}, "priority": {"type": "long"}, "reqmgr_name": {"type": "keyword"}, "status": {"type": "keyword"}, "status_from_reqmngr": {"type": "keyword"}, "status_in_DAS": {"type": "keyword"}, "total_events": {"type": "long"}}}
+mapping = {"properties":{"member_of_campaign": {"type": "keyword", "analyzer": "keyword"}}}
 db =
 db_source =
 fetch_fields =
