--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -1,5 +1,5 @@
 [cookie]
-path = /private/mycookie.txt
+path = /home/pdmvserv/private/prod_cookie.txt
 
 [exclude]
 list = _design/lucene, _design/requests, _design/unique, _design/crap, _design/chained_requests, _design/chained_campaigns, _design/campaigns, _design/stats, _design/flows
