--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -50,13 +50,14 @@ pmp_db = flow/
 pmp_db_index = flows/
 
 [stats]
-db = stats/
-db_source = https://cms-pdmv.cern.ch/stats/
+db = admin/stats/
+db_source = https://cms-pdmv-dev.cern.ch/stats2/
 fetch_fields = pdmv_dataset_name, pdmv_expected_events, pdmv_monitor_history, pdmv_monitor_datasets, pdmv_prep_id, pdmv_request_name, pdmv_type, rereco_preferred_dataset
 last_seq = stats
 mapping = {"properties":{"pdmv_prep_id": {"type": "keyword", "analyzer": "keyword"}}}
 pmp_db_index = stats/
 pmp_db = stats/
+cookie = /home/pdmvserv/private/dev_cookie.txt
 
 [processing_strings]
 mapping =
