Change stats url to prod instance

--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -51,7 +51,7 @@ pmp_db_index = flows/
 
 [stats]
 db = admin/stats/
-db_source = https://cms-pdmv-dev.cern.ch/stats2/
+db_source = https://cms-pdmv.cern.ch/stats/
 fetch_fields = pdmv_dataset_name, pdmv_expected_events, pdmv_monitor_history, pdmv_monitor_datasets, pdmv_prep_id, pdmv_request_name, pdmv_type, rereco_preferred_dataset
 last_seq = stats
 mapping = {"properties":{"pdmv_prep_id": {"type": "keyword", "analyzer": "keyword"}}}
