Add McM tags to pMp

--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -25,7 +25,7 @@ pmp_db_index = chained_requests/
 [requests]
 db = admin/requests/
 db_source = https://cms-pdmv.cern.ch/mcm/
-fetch_fields = completed_events, efficiency, history, member_of_campaign, output_dataset, prepid, priority, pwg, reqmgr_name, status, time_event, total_events, flown_with, member_of_chain, reqmgr_status_history
+fetch_fields = completed_events, efficiency, history, member_of_campaign, output_dataset, prepid, priority, pwg, reqmgr_name, status, time_event, total_events, flown_with, member_of_chain, reqmgr_status_history, tags
 last_seq = requests
 mapping = {"properties": {"member_of_campaign": {"type": "keyword", "analyzer": "keyword"}, "flown_with": {"type": "keyword", "analyzer": "keyword"}}}
 pmp_db = request/
@@ -75,6 +75,15 @@ fetch_fields =
 last_seq = rereco_requests
 pmp_db_index = rereco_requests/
 pmp_db = rereco_request/
+
+[tags]
+mapping = {"properties":{"member_of_campaign": {"type": "keyword", "analyzer": "keyword"}}}
+db =
+db_source =
+fetch_fields =
+last_seq =
+pmp_db_index = tags/
+pmp_db = tag/
 
 [reqmgr]
 url = https://cmsweb.cern.ch/couchdb/reqmgr_workload_cache/
