Remove wrong mapping for tags

--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -77,7 +77,7 @@ pmp_db_index = rereco_requests/
 pmp_db = rereco_request/
 
 [tags]
-mapping = {"properties":{"member_of_campaign": {"type": "keyword", "analyzer": "keyword"}}}
+mapping =
 db =
 db_source =
 fetch_fields =
