--- a/pmp/static/bower.json
+++ b/pmp/static/bower.json
@@ -5,7 +5,7 @@
   "authors": [
     "cms-PdmV"
   ],
-  "description": "provides monitoring of the workflow Monte Carlo request submission from PdmV/mccm to computing, and the advancement of the workflows in production",
+  "description": "Production Monitoring Platform",
   "main": "index.js",
   "license": "MIT",
   "ignore": [
@@ -22,11 +22,11 @@
     "angular": "1.3.17",
     "animate.css": "~3.3.0",
     "bootstrap": "~3.3.5",
+    "clipboard": "~2.0.1",
     "d3": "~3.5.6",
     "font-awesome": "~4.4.0",
     "jquery-sortable": "~0.9.13",
-    "jquery": "~2.1.4",
-    "zeroclipboard": "~2.2.0"
+    "jquery": "~2.1.4"
   },
   "resolutions": {
     "angular": "1.3.17"
