Remove multiple prepid search

--- a/fetchd/default.conf
+++ b/fetchd/default.conf
@@ -13,8 +13,8 @@ list = _design/lucene, _design/requests, _design/unique, _design/crap, _design/c
 url = https://cmsweb.cern.ch/couchdb/reqmgr_workload_cache/
 
 [workflows]
-source_db = https://137.138.148.164/get/
-source_db_changes = http://137.138.148.164:5984/requests/_changes?since
+source_db = https://instance3/get/
+source_db_changes = http://instance3:5984/requests/_changes?since
 fetch_fields = TotalEvents, OutputDatasets, PrepID, RequestName, RequestType, EventNumberHistory, RequestTransition
 mapping = {"properties":{"PrepID": {"type": "keyword"}}}
 pmp_index = workflows/
