Fix tags mapping, other small bugs

--- a/fetchd/default.conf
+++ b/fetchd/default.conf
@@ -32,7 +32,7 @@ pmp_type = rereco_request/
 source_db = https://cms-pdmv.cern.ch/mcm/admin/requests/
 source_db_changes = https://cms-pdmv.cern.ch/mcm/admin/requests/_changes?since
 fetch_fields = completed_events, history, member_of_campaign, output_dataset, prepid, priority, pwg, reqmgr_name, status, time_event, total_events, flown_with, member_of_chain, reqmgr_status_history, tags
-mapping = {"properties": {"member_of_campaign": {"type": "keyword", "analyzer": "keyword"}, "flown_with": {"type": "keyword", "analyzer": "keyword"}}}
+mapping = {"properties": {"member_of_campaign": {"type": "keyword"}, "flown_with": {"type": "keyword"}, "tags": {"type": "keyword"}}}
 pmp_index = requests/
 pmp_type = request/
 cookie = /home/jrumsevi/prod_cookie.txt
