Update request mapping

--- a/fetchd/dev.conf
+++ b/fetchd/dev.conf
@@ -27,7 +27,7 @@ db = admin/requests/
 db_source = https://cms-pdmv.cern.ch/mcm/
 fetch_fields = completed_events, efficiency, history, member_of_campaign, output_dataset, prepid, priority, pwg, reqmgr_name, status, time_event, total_events, flown_with, member_of_chain, reqmgr_status_history, tags
 last_seq = requests
-mapping = {"properties": {"member_of_campaign": {"type": "keyword", "analyzer": "keyword"}, "flown_with": {"type": "keyword", "analyzer": "keyword"}}}
+mapping = {"properties": {"member_of_campaign": {"type": "keyword"}, "flown_with": {"type": "keyword"}, "tags": {"type": "keyword"}}}
 pmp_db = request/
 pmp_db_index = requests/
 
