Add processing string, rename 'thing' to 'object' in fetch

--- a/fetchd/default.conf
+++ b/fetchd/default.conf
@@ -15,7 +15,7 @@ url = https://cmsweb.cern.ch/couchdb/reqmgr_workload_cache/
 [workflows]
 source_db = https://instance3/get/
 source_db_changes = http://instance3:5984/requests/_changes?since
-fetch_fields = TotalEvents, OutputDatasets, PrepID, RequestName, RequestType, EventNumberHistory, RequestTransition
+fetch_fields = TotalEvents, OutputDatasets, PrepID, RequestName, RequestType, EventNumberHistory, RequestTransition, ProcessingString
 mapping = {"properties":{"PrepID": {"type": "keyword"}}}
 pmp_index = workflows/
 pmp_type = workflow/
