--- a/fetchd/default.conf
+++ b/fetchd/default.conf
@@ -7,7 +7,7 @@ last_seq = http://localhost:9200/last_sequences/last_seq/
 last_seq_mapping = {"properties": {"time": {"type": "long"}, "val": {"type": "keyword"}}}
 
 [exclude]
-list = _design/lucene, _design/requests, _design/unique, _design/crap, _design/chained_requests, _design/chained_campaigns, _design/campaigns, _design/stats, _design/flows, _design/designDoc
+list = _design/lucene, _design/requests, _design/unique, _design/crap, _design/chained_requests, _design/chained_campaigns, _design/campaigns, _design/stats, _design/flows, _design/designDoc, _design/_designDoc
 
 [reqmgr]
 url = https://cmsweb.cern.ch/couchdb/reqmgr_workload_cache/
@@ -31,7 +31,7 @@ pmp_type = rereco_request/
 [requests]
 source_db = https://cms-pdmv.cern.ch/mcm/admin/requests/
 source_db_changes = https://cms-pdmv.cern.ch/mcm/admin/requests/_changes?since
-fetch_fields = completed_events, history, member_of_campaign, output_dataset, prepid, priority, pwg, reqmgr_name, status, time_event, total_events, flown_with, member_of_chain, reqmgr_status_history, tags
+fetch_fields = history, member_of_campaign, output_dataset, prepid, priority, pwg, reqmgr_name, status, time_event, total_events, flown_with, member_of_chain, reqmgr_status_history, tags
 mapping = {"properties": {"member_of_campaign": {"type": "keyword"}, "flown_with": {"type": "keyword"}, "tags": {"type": "keyword"}}}
 pmp_index = requests/
 pmp_type = request/
