--- a/pmp/static/bower.json
+++ b/pmp/static/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "pmp",
-  "version": "0.0.0",
+  "name": "pMp",
+  "version": "2.0.0",
   "homepage": "https://github.com/cms-PdmV/pmp",
   "authors": [
     "cms-PdmV"
@@ -16,19 +16,15 @@
     "tests"
   ],
   "dependencies": {
-    "angular-animate": "~1.3.16",
-    "angular-bootstrap": "~0.13.1",
-    "angular-route": "~1.3.16",
-    "angular": "1.3.17",
-    "animate.css": "~3.3.0",
-    "bootstrap": "~3.3.5",
-    "clipboard": "~2.0.1",
-    "d3": "~3.5.6",
-    "font-awesome": "~4.4.0",
-    "jquery-sortable": "~0.9.13",
-    "jquery": "~2.1.4"
-  },
-  "resolutions": {
-    "angular": "1.3.17"
+    "angular-animate": "1.7.5",
+    "angular-bootstrap": "2.5.0",
+    "angular-route": "1.7.5",
+    "angular": "1.7.5",
+    "animate.css": "3.7.0",
+    "bootstrap": "4.1.3",
+    "clipboard": "2.0.4",
+    "d3": "5.7.0",
+    "font-awesome": "5.5.0",
+    "jquery": "3.3.1"
   }
 }
