Add RelVals, start re-doing present statistics

--- a/fetchd/default.conf
+++ b/fetchd/default.conf
@@ -28,6 +28,38 @@ mapping = {"properties":{"member_of_campaign": {"type": "keyword", "analyzer": "
 pmp_index = rereco_requests/
 pmp_type = rereco_request/
 
+[rereco_campaigns]
+source_db = 
+source_db_changes = 
+fetch_fields = 
+mapping = 
+pmp_index = rereco_campaigns/
+pmp_type = rereco_campaign/
+
+[relval_requests]
+source_db =
+source_db_changes =
+fetch_fields = 
+mapping = {"properties":{"member_of_campaign": {"type": "keyword", "analyzer": "keyword"}}}
+pmp_index = relval_requests/
+pmp_type = relval_request/
+
+[relval_campaigns]
+source_db = 
+source_db_changes = 
+fetch_fields = 
+mapping = 
+pmp_index = relval_campaigns/
+pmp_type = relval_campaign/
+
+[relval_cmssw_versions]
+source_db =
+source_db_changes =
+fetch_fields = 
+mapping = 
+pmp_index = relval_cmssw_versions/
+pmp_type = relval_cmssw_version/
+
 [requests]
 source_db = https://cms-pdmv.cern.ch/mcm/admin/requests/
 source_db_changes = https://cms-pdmv.cern.ch/mcm/admin/requests/_changes?since
