PPD tags, McM dataset name, major clean up

--- a/fetchd/default.conf
+++ b/fetchd/default.conf
@@ -63,7 +63,7 @@ pmp_type = relval_cmssw_version/
 [requests]
 source_db = https://cms-pdmv.cern.ch/mcm/admin/requests/
 source_db_changes = https://cms-pdmv.cern.ch/mcm/admin/requests/_changes?since
-fetch_fields = history, member_of_campaign, output_dataset, prepid, priority, pwg, reqmgr_name, status, time_event, total_events, flown_with, member_of_chain, reqmgr_status_history, tags
+fetch_fields = history, member_of_campaign, output_dataset, prepid, priority, pwg, reqmgr_name, status, time_event, total_events, flown_with, member_of_chain, reqmgr_status_history, tags, dataset_name, ppd_tags
 mapping = {"properties": {"member_of_campaign": {"type": "keyword"}, "flown_with": {"type": "keyword"}, "tags": {"type": "keyword"}}}
 pmp_index = requests/
 pmp_type = request/
@@ -109,7 +109,7 @@ cookie = /home/jrumsevi/prod_cookie.txt
 source_db =
 source_db_changes =
 fetch_fields = 
-mapping = 
+mapping = {"properties": {"prepid": {"type": "keyword", "analyzer": "keyword"}}}
 pmp_index = processing_strings/
 pmp_type = processing_string/
 
@@ -117,6 +117,23 @@ pmp_type = processing_string/
 source_db =
 source_db_changes =
 fetch_fields = 
-mapping = 
+mapping = {"properties": {"prepid": {"type": "keyword", "analyzer": "keyword"}}}
 pmp_index = tags/
 pmp_type = tag/
+
+[ppd_tags]
+source_db =
+source_db_changes =
+fetch_fields =
+mapping = {"properties": {"prepid": {"type": "keyword", "analyzer": "keyword"}}}
+pmp_index = ppd_tags/
+pmp_type = ppd_tag/
+
+[mcm_dataset_name]
+source_db =
+source_db_changes =
+fetch_fields =
+mapping = {"properties": {"prepid": {"type": "keyword", "analyzer": "keyword"}}}
+pmp_index = mcm_dataset_names/
+pmp_type = mcm_dataset_name/
+
