Mapping, small navigation improvements, colors in present

--- a/fetchd/default.conf
+++ b/fetchd/default.conf
@@ -16,7 +16,7 @@ url = https://cmsweb.cern.ch/couchdb/reqmgr_workload_cache/
 source_db = https://instance3/get/
 source_db_changes = http://instance3:5984/requests/_changes?since
 fetch_fields = TotalEvents, OutputDatasets, PrepID, RequestName, RequestType, EventNumberHistory, RequestTransition, ProcessingString
-mapping = {"properties":{"PrepID": {"type": "keyword"}}}
+mapping = {"properties":{"PrepID": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = workflows/
 pmp_type = workflow/
 
@@ -24,7 +24,7 @@ pmp_type = workflow/
 source_db =
 source_db_changes =
 fetch_fields = 
-mapping = {"properties":{"member_of_campaign": {"type": "keyword", "analyzer": "keyword"}}}
+mapping = {"properties":{"prepid": {"type": "text", "analyzer": "keyword"}, "member_of_campaign": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = rereco_requests/
 pmp_type = rereco_request/
 
@@ -32,7 +32,7 @@ pmp_type = rereco_request/
 source_db = 
 source_db_changes = 
 fetch_fields = 
-mapping = 
+mapping = {"properties": {"prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = rereco_campaigns/
 pmp_type = rereco_campaign/
 
@@ -40,7 +40,7 @@ pmp_type = rereco_campaign/
 source_db =
 source_db_changes =
 fetch_fields = 
-mapping = {"properties":{"member_of_campaign": {"type": "keyword", "analyzer": "keyword"}}}
+mapping = {"properties":{"prepid": {"type": "text", "analyzer": "keyword"}, "member_of_campaign": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = relval_requests/
 pmp_type = relval_request/
 
@@ -48,7 +48,7 @@ pmp_type = relval_request/
 source_db = 
 source_db_changes = 
 fetch_fields = 
-mapping = 
+mapping = {"properties": {"prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = relval_campaigns/
 pmp_type = relval_campaign/
 
@@ -56,7 +56,7 @@ pmp_type = relval_campaign/
 source_db =
 source_db_changes =
 fetch_fields = 
-mapping = 
+mapping = {"properties": {"type": "text", "analyzer": "keyword"}}
 pmp_index = relval_cmssw_versions/
 pmp_type = relval_cmssw_version/
 
@@ -64,7 +64,7 @@ pmp_type = relval_cmssw_version/
 source_db = https://cms-pdmv.cern.ch/mcm/admin/requests/
 source_db_changes = https://cms-pdmv.cern.ch/mcm/admin/requests/_changes?since
 fetch_fields = history, member_of_campaign, output_dataset, prepid, priority, pwg, reqmgr_name, status, time_event, total_events, flown_with, member_of_chain, reqmgr_status_history, tags, dataset_name, ppd_tags
-mapping = {"properties": {"member_of_campaign": {"type": "keyword"}, "flown_with": {"type": "keyword"}, "tags": {"type": "keyword"}}}
+mapping = {"properties": {"member_of_campaign": {"type": "text", "analyzer": "keyword"}, "flown_with": {"type": "text", "analyzer": "keyword"}, "tags": {"type": "text", "analyzer": "keyword"}, "prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = requests/
 pmp_type = request/
 cookie = /home/jrumsevi/prod_cookie.txt
@@ -73,7 +73,7 @@ cookie = /home/jrumsevi/prod_cookie.txt
 source_db = https://cms-pdmv.cern.ch/mcm/admin/chained_requests/
 source_db_changes = https://cms-pdmv.cern.ch/mcm/admin/chained_requests/_changes?since
 fetch_fields = chain, member_of_campaign, prepid
-mapping = {"properties": {"member_of_campaign": {"type": "keyword", "analyzer": "keyword"}}}
+mapping = {"properties": {"member_of_campaign": {"type": "text", "analyzer": "keyword", "prepid": {"type": "text", "analyzer": "keyword"}}}}
 pmp_index = chained_requests/
 pmp_type = chained_request/
 cookie = /home/jrumsevi/prod_cookie.txt
@@ -82,7 +82,7 @@ cookie = /home/jrumsevi/prod_cookie.txt
 source_db = https://cms-pdmv.cern.ch/mcm/admin/campaigns/
 source_db_changes = https://cms-pdmv.cern.ch/mcm/admin/campaigns/_changes?since
 fetch_fields = prepid
-mapping = 
+mapping = {"properties": {"prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = campaigns/
 pmp_type = campaign/
 cookie = /home/jrumsevi/prod_cookie.txt
@@ -91,7 +91,7 @@ cookie = /home/jrumsevi/prod_cookie.txt
 source_db = https://cms-pdmv.cern.ch/mcm/admin/chained_campaigns/
 source_db_changes = https://cms-pdmv.cern.ch/mcm/admin/chained_campaigns/_changes?since
 fetch_fields = campaigns, prepid
-mapping = {"properties": {"campaigns": {"type": "keyword", "analyzer": "keyword"}}}
+mapping = {"properties": {"campaigns": {"type": "text", "analyzer": "keyword"}, "prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = chained_campaigns/
 pmp_type = chained_campaign/
 cookie = /home/jrumsevi/prod_cookie.txt
@@ -100,7 +100,7 @@ cookie = /home/jrumsevi/prod_cookie.txt
 source_db = https://cms-pdmv.cern.ch/mcm/admin/flows/
 source_db_changes = https://cms-pdmv.cern.ch/mcm/admin/flows/_changes?since
 fetch_fields = prepid
-mapping = 
+mapping = {"properties": {"prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = flows/
 pmp_type = flow/
 cookie = /home/jrumsevi/prod_cookie.txt
@@ -109,7 +109,7 @@ cookie = /home/jrumsevi/prod_cookie.txt
 source_db =
 source_db_changes =
 fetch_fields = 
-mapping = {"properties": {"prepid": {"type": "keyword", "analyzer": "keyword"}}}
+mapping = {"properties": {"prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = processing_strings/
 pmp_type = processing_string/
 
@@ -117,7 +117,7 @@ pmp_type = processing_string/
 source_db =
 source_db_changes =
 fetch_fields = 
-mapping = {"properties": {"prepid": {"type": "keyword", "analyzer": "keyword"}}}
+mapping = {"properties": {"prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = tags/
 pmp_type = tag/
 
@@ -125,7 +125,7 @@ pmp_type = tag/
 source_db =
 source_db_changes =
 fetch_fields =
-mapping = {"properties": {"prepid": {"type": "keyword", "analyzer": "keyword"}}}
+mapping = {"properties": {"prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = ppd_tags/
 pmp_type = ppd_tag/
 
@@ -133,7 +133,7 @@ pmp_type = ppd_tag/
 source_db =
 source_db_changes =
 fetch_fields =
-mapping = {"properties": {"prepid": {"type": "keyword", "analyzer": "keyword"}}}
+mapping = {"properties": {"prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = mcm_dataset_names/
 pmp_type = mcm_dataset_name/
 
