--- a/fetchd/default.conf
+++ b/fetchd/default.conf
@@ -1,5 +1,5 @@
 [credentials]
-cookie = /home/jrumsevi/prod_cookie.txt
+cookie = /home/pdmvserv/prod_cookie.txt
 
 [pmp]
 db = http://localhost:9200/
@@ -13,8 +13,8 @@ list = _design/lucene, _design/requests, _design/unique, _design/crap, _design/c
 url = https://cmsweb.cern.ch/couchdb/reqmgr_workload_cache/
 
 [workflows]
-source_db = https://instance3/get/
-source_db_changes = http://instance3:5984/requests/_changes?since
+source_db = http://vocms074:5984/requests/
+source_db_changes = http://vocms074:5984/requests/_changes?since
 fetch_fields = TotalEvents, OutputDatasets, PrepID, RequestName, RequestType, EventNumberHistory, RequestTransition, ProcessingString
 mapping = {"properties":{"PrepID": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = workflows/
@@ -67,7 +67,6 @@ fetch_fields = history, member_of_campaign, output_dataset, prepid, priority, pw
 mapping = {"properties": {"member_of_campaign": {"type": "text", "analyzer": "keyword"}, "flown_with": {"type": "text", "analyzer": "keyword"}, "tags": {"type": "text", "analyzer": "keyword"}, "prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = requests/
 pmp_type = request/
-cookie = /home/jrumsevi/prod_cookie.txt
 
 [chained_requests]
 source_db = https://cms-pdmv.cern.ch/mcm/admin/chained_requests/
@@ -76,7 +75,6 @@ fetch_fields = chain, member_of_campaign, prepid
 mapping = {"properties": {"member_of_campaign": {"type": "text", "analyzer": "keyword", "prepid": {"type": "text", "analyzer": "keyword"}}}}
 pmp_index = chained_requests/
 pmp_type = chained_request/
-cookie = /home/jrumsevi/prod_cookie.txt
 
 [campaigns]
 source_db = https://cms-pdmv.cern.ch/mcm/admin/campaigns/
@@ -85,7 +83,6 @@ fetch_fields = prepid
 mapping = {"properties": {"prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = campaigns/
 pmp_type = campaign/
-cookie = /home/jrumsevi/prod_cookie.txt
 
 [chained_campaigns]
 source_db = https://cms-pdmv.cern.ch/mcm/admin/chained_campaigns/
@@ -94,7 +91,6 @@ fetch_fields = campaigns, prepid
 mapping = {"properties": {"campaigns": {"type": "text", "analyzer": "keyword"}, "prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = chained_campaigns/
 pmp_type = chained_campaign/
-cookie = /home/jrumsevi/prod_cookie.txt
 
 [flows]
 source_db = https://cms-pdmv.cern.ch/mcm/admin/flows/
@@ -103,7 +99,6 @@ fetch_fields = prepid
 mapping = {"properties": {"prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = flows/
 pmp_type = flow/
-cookie = /home/jrumsevi/prod_cookie.txt
 
 [processing_strings]
 source_db =
