Add search by datatiers, redo search suggestions

--- a/fetchd/default.conf
+++ b/fetchd/default.conf
@@ -16,7 +16,7 @@ url = https://cmsweb.cern.ch/couchdb/reqmgr_workload_cache/
 source_db = http://vocms074:5984/requests/
 source_db_changes = http://vocms074:5984/requests/_changes?since
 fetch_fields = TotalEvents, OutputDatasets, PrepID, RequestName, RequestType, EventNumberHistory, RequestTransition, ProcessingString
-mapping = {"properties":{"PrepID": {"type": "text", "analyzer": "keyword"}}}
+mapping = {"properties":{"prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = workflows/
 pmp_type = workflow/
 
@@ -61,40 +61,40 @@ pmp_index = relval_cmssw_versions/
 pmp_type = relval_cmssw_version/
 
 [requests]
-source_db = https://cms-pdmv.cern.ch/mcm/admin/requests/
-source_db_changes = https://cms-pdmv.cern.ch/mcm/admin/requests/_changes?since
-fetch_fields = history, member_of_campaign, output_dataset, prepid, priority, pwg, reqmgr_name, status, time_event, total_events, flown_with, member_of_chain, reqmgr_status_history, tags, dataset_name, ppd_tags
-mapping = {"properties": {"member_of_campaign": {"type": "text", "analyzer": "keyword"}, "flown_with": {"type": "text", "analyzer": "keyword"}, "tags": {"type": "text", "analyzer": "keyword"}, "prepid": {"type": "text", "analyzer": "keyword"}}}
+source_db = http://vocms090:5984/requests/
+source_db_changes = http://vocms090:5984/requests/_changes?since
+fetch_fields = dataset_name, datatiers, flown_with, history, member_of_campaign, member_of_chain, output_dataset, ppd_tags, prepid, priority, pwg, reqmgr_name, reqmgr_status_history, status, tags, time_event, total_events
+mapping = {"properties": {"dataset_name": {"type": "text", "analyzer": "keyword"}, "datatiers": {"type": "text", "analyzer": "keyword"}, "flown_with": {"type": "text", "analyzer": "keyword"}, "member_of_campaign": {"type": "text", "analyzer": "keyword"}, "member_of_chain": {"type": "text", "analyzer": "keyword"}, "output_dataset": {"type": "text", "analyzer": "keyword"}, "ppd_tags": {"type": "text", "analyzer": "keyword"}, "prepid": {"type": "text", "analyzer": "keyword"}, "reqmgr_name": {"type": "text", "analyzer": "keyword"}, "status": {"type": "text", "analyzer": "keyword"}, "tags": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = requests/
 pmp_type = request/
 
 [chained_requests]
-source_db = https://cms-pdmv.cern.ch/mcm/admin/chained_requests/
-source_db_changes = https://cms-pdmv.cern.ch/mcm/admin/chained_requests/_changes?since
+source_db = http://vocms090:5984/chained_requests/
+source_db_changes = http://vocms090:5984/chained_requests/_changes?since
 fetch_fields = chain, member_of_campaign, prepid
-mapping = {"properties": {"member_of_campaign": {"type": "text", "analyzer": "keyword", "prepid": {"type": "text", "analyzer": "keyword"}}}}
+mapping = {"properties": {"member_of_campaign": {"type": "text", "analyzer": "keyword"}, "prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = chained_requests/
 pmp_type = chained_request/
 
 [campaigns]
-source_db = https://cms-pdmv.cern.ch/mcm/admin/campaigns/
-source_db_changes = https://cms-pdmv.cern.ch/mcm/admin/campaigns/_changes?since
+source_db = http://vocms090:5984/campaigns/
+source_db_changes = http://vocms090:5984/campaigns/_changes?since
 fetch_fields = prepid
 mapping = {"properties": {"prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = campaigns/
 pmp_type = campaign/
 
 [chained_campaigns]
-source_db = https://cms-pdmv.cern.ch/mcm/admin/chained_campaigns/
-source_db_changes = https://cms-pdmv.cern.ch/mcm/admin/chained_campaigns/_changes?since
+source_db = http://vocms090:5984/chained_campaigns/
+source_db_changes = http://vocms090:5984/chained_campaigns/_changes?since
 fetch_fields = campaigns, prepid
 mapping = {"properties": {"campaigns": {"type": "text", "analyzer": "keyword"}, "prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = chained_campaigns/
 pmp_type = chained_campaign/
 
 [flows]
-source_db = https://cms-pdmv.cern.ch/mcm/admin/flows/
-source_db_changes = https://cms-pdmv.cern.ch/mcm/admin/flows/_changes?since
+source_db = http://vocms090:5984/flows/
+source_db_changes = http://vocms090:5984/flows/_changes?since
 fetch_fields = prepid
 mapping = {"properties": {"prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = flows/
@@ -131,4 +131,12 @@ fetch_fields =
 mapping = {"properties": {"prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = mcm_dataset_names/
 pmp_type = mcm_dataset_name/
+
+[mcm_datatiers]
+source_db =
+source_db_changes =
+fetch_fields =
+mapping = {"properties": {"prepid": {"type": "text", "analyzer": "keyword"}}}
+pmp_index = mcm_datatiers/
+pmp_type = mcm_datatier/
 
