Remove cookies, change how rereco and relval requests are created

--- a/fetchd/default.conf
+++ b/fetchd/default.conf
@@ -1,13 +1,10 @@
-[credentials]
-cookie = /home/pdmvserv/prod_cookie.txt
-
 [pmp]
 db = http://localhost:9200/
 last_seq = http://localhost:9200/last_sequences/last_seq/
 last_seq_mapping = {"properties": {"time": {"type": "long"}, "val": {"type": "keyword"}}}
 
 [exclude]
-list = _design/lucene, _design/requests, _design/unique, _design/crap, _design/chained_requests, _design/chained_campaigns, _design/campaigns, _design/stats, _design/flows, _design/designDoc, _design/_designDoc
+list = _design/lucene, _design/requests, _design/unique, _design/crap, _design/chained_requests, _design/chained_campaigns, _design/campaigns, _design/stats, _design/flows, _design/designDoc, _design/_designDoc, _design/_datasets
 
 [reqmgr]
 url = https://cmsweb.cern.ch/couchdb/reqmgr_workload_cache/
@@ -24,7 +21,7 @@ pmp_type = workflow/
 source_db =
 source_db_changes =
 fetch_fields = 
-mapping = {"properties":{"prepid": {"type": "text", "analyzer": "keyword"}, "member_of_campaign": {"type": "text", "analyzer": "keyword"}}}
+mapping = {"properties":{"prepid": {"type": "text", "analyzer": "keyword"}, "member_of_campaign": {"type": "text", "analyzer": "keyword"}, "reqmgr_name": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = rereco_requests/
 pmp_type = rereco_request/
 
@@ -40,7 +37,7 @@ pmp_type = rereco_campaign/
 source_db =
 source_db_changes =
 fetch_fields = 
-mapping = {"properties":{"prepid": {"type": "text", "analyzer": "keyword"}, "member_of_campaign": {"type": "text", "analyzer": "keyword"}}}
+mapping = {"properties":{"prepid": {"type": "text", "analyzer": "keyword"}, "member_of_campaign": {"type": "text", "analyzer": "keyword"}, "reqmgr_name": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = relval_requests/
 pmp_type = relval_request/
 
