--- a/pmp/package.json
+++ b/pmp/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^3.3.7",
     "clipboard": "^2.0.4",
     "d3": "^5.9.0",
+    "dateformat": "^3.0.3",
     "font-awesome": "^4.7.0",
     "grunt": "^0.4.5",
     "jquery": "^3.3.1",
