--- a/fetchd/default.conf
+++ b/fetchd/default.conf
@@ -60,8 +60,8 @@ pmp_type = relval_cmssw_version/
 [requests]
 source_db = http://vocms090:5984/requests/
 source_db_changes = http://vocms090:5984/requests/_changes?since
-fetch_fields = dataset_name, datatiers, flown_with, history, member_of_campaign, member_of_chain, output_dataset, ppd_tags, prepid, priority, pwg, reqmgr_name, reqmgr_status_history, status, tags, time_event, total_events
-mapping = {"properties": {"dataset_name": {"type": "text", "analyzer": "keyword"}, "datatiers": {"type": "text", "analyzer": "keyword"}, "flown_with": {"type": "text", "analyzer": "keyword"}, "member_of_campaign": {"type": "text", "analyzer": "keyword"}, "member_of_chain": {"type": "text", "analyzer": "keyword"}, "output_dataset": {"type": "text", "analyzer": "keyword"}, "ppd_tags": {"type": "text", "analyzer": "keyword"}, "prepid": {"type": "text", "analyzer": "keyword"}, "reqmgr_name": {"type": "text", "analyzer": "keyword"}, "status": {"type": "text", "analyzer": "keyword"}, "tags": {"type": "text", "analyzer": "keyword"}}}
+fetch_fields = dataset_name, datatiers, flown_with, history, interested_pwg, member_of_campaign, member_of_chain, output_dataset, ppd_tags, prepid, priority, pwg, reqmgr_name, reqmgr_status_history, status, tags, time_event, total_events
+mapping = {"properties": {"dataset_name": {"type": "text", "analyzer": "keyword"}, "datatiers": {"type": "text", "analyzer": "keyword"}, "flown_with": {"type": "text", "analyzer": "keyword"}, "interested_pwd": {"type": "text", "analyzer": "keyword"}, "member_of_campaign": {"type": "text", "analyzer": "keyword"}, "member_of_chain": {"type": "text", "analyzer": "keyword"}, "output_dataset": {"type": "text", "analyzer": "keyword"}, "ppd_tags": {"type": "text", "analyzer": "keyword"}, "prepid": {"type": "text", "analyzer": "keyword"}, "reqmgr_name": {"type": "text", "analyzer": "keyword"}, "status": {"type": "text", "analyzer": "keyword"}, "tags": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = requests/
 pmp_type = request/
 
