Ignore _design/validate_write document

--- a/fetchd/default.conf
+++ b/fetchd/default.conf
@@ -4,7 +4,7 @@ last_seq = http://localhost:9200/last_sequences/last_seq/
 last_seq_mapping = {"properties": {"time": {"type": "long"}, "val": {"type": "keyword"}}}
 
 [exclude]
-list = _design/lucene, _design/requests, _design/unique, _design/crap, _design/chained_requests, _design/chained_campaigns, _design/campaigns, _design/stats, _design/flows, _design/designDoc, _design/_designDoc, _design/_datasets
+list = _design/lucene, _design/requests, _design/unique, _design/crap, _design/chained_requests, _design/chained_campaigns, _design/campaigns, _design/stats, _design/flows, _design/designDoc, _design/_designDoc, _design/_datasets, _design/validate_write
 
 [reqmgr]
 url = https://cmsweb.cern.ch/couchdb/reqmgr_workload_cache/
