--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@
 # Elasticsearch 6.x
 elasticsearch>=6.0.0,<7.0.0
 
-# Flask
-flask
+Flask==2.2.3 
+Werkzeug==2.2.3
+cachelib==0.10.2  
+gunicorn==20.1.0 
+requests==2.28.2 
 
