--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 # Used to install correct version of elasticsearch lib for python
 # Use pip for installation
 
+# Search Engines: Elasticsearch 6.X and Opensearch 2.X
+
 # Elasticsearch 6.x
 elasticsearch>=6.0.0,<7.0.0
+
+# Opensearch 2.x
+opensearch-py>=2.2.0,<3.0.0
 
 Flask==2.2.3 
 Werkzeug==2.2.3
 cachelib==0.10.2  
 gunicorn==20.1.0 
-requests==2.28.2 
+requests==2.28.2
+requests-gssapi>=1.2.3 
 
