--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # Opensearch 2.x
 opensearch-py>=2.2.0,<3.0.0
 
-Flask==2.2.3 
-Werkzeug==2.2.3
+Flask==2.3.2 
+Flask-Compress==1.13
 cachelib==0.10.2  
 gunicorn==20.1.0 
 requests==2.28.2
