pMp attachment /tmp folder permissions & JS dependencies
Include into the container the node_modules/ folder. Some HTML templates references this dependencies folder for properly display content. Grunt builder module is not able to recognize the font-awesome dependency if we included it into the build process.

Related to the attachment /tmp folder. Some container runtime environments like Openshift runs all the containers by default with a random user to add an extra security layer. Just allow this random user to create content into this tmp/ folder

--- a/.dockerignore
+++ b/.dockerignore
@@ -15,3 +15,9 @@ pmp/node_modules/
 
 # Ignore package-lock.json
 pmp/package-lock.json
+
+# Ignore .env files
+*.env
+
+# Ignore Docker Compose test file
+pmp.yaml
