Include the `lumisection` attributes from the Stats2 document
1. Retrieve the expected lumisections from the ReqMgr2 workflow document and include them as `total_input_lumis`.
2. Retrieve the lumisections processed in the output datasets (via DBS) and set them in the latest history record. The older history records will have this field set as zero.

--- a/fetchd/default.conf
+++ b/fetchd/default.conf
@@ -12,7 +12,7 @@ url = https://cmsweb.cern.ch/couchdb/reqmgr_workload_cache/
 [workflows]
 source_db = http://vocms074:5984/requests/
 source_db_changes = http://vocms074:5984/requests/_changes?since
-fetch_fields = TotalEvents, OutputDatasets, PrepID, RequestName, RequestType, EventNumberHistory, RequestTransition, ProcessingString
+fetch_fields = TotalEvents, TotalInputLumis, OutputDatasets, PrepID, RequestName, RequestType, EventNumberHistory, RequestTransition, ProcessingString
 mapping = {"properties":{"prepid": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = workflows/
 pmp_type = workflow/
@@ -60,7 +60,7 @@ pmp_type = relval_cmssw_version/
 [requests]
 source_db = http://vocms0490:5984/requests/
 source_db_changes = http://vocms0490:5984/requests/_changes?since
-fetch_fields = dataset_name, datatiers, flown_with, history, interested_pwg, member_of_campaign, member_of_chain, output_dataset, ppd_tags, prepid, priority, pwg, reqmgr_name, reqmgr_status_history, status, tags, time_event, total_events
+fetch_fields = dataset_name, datatiers, flown_with, history, interested_pwg, member_of_campaign, member_of_chain, output_dataset, ppd_tags, prepid, priority, pwg, reqmgr_name, reqmgr_status_history, status, tags, time_event, total_events, total_input_lumis
 mapping = {"properties": {"dataset_name": {"type": "text", "analyzer": "keyword"}, "datatiers": {"type": "text", "analyzer": "keyword"}, "flown_with": {"type": "text", "analyzer": "keyword"}, "interested_pwd": {"type": "text", "analyzer": "keyword"}, "member_of_campaign": {"type": "text", "analyzer": "keyword"}, "member_of_chain": {"type": "text", "analyzer": "keyword"}, "output_dataset": {"type": "text", "analyzer": "keyword"}, "ppd_tags": {"type": "text", "analyzer": "keyword"}, "prepid": {"type": "text", "analyzer": "keyword"}, "reqmgr_name": {"type": "text", "analyzer": "keyword"}, "status": {"type": "text", "analyzer": "keyword"}, "tags": {"type": "text", "analyzer": "keyword"}}}
 pmp_index = requests/
 pmp_type = request/
