--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-# Used to install correct version of elasticsearch lib for python
-# Use pip for installation
+# Opensearch 2.x
+opensearch-py>=2.2.0,<3.0.0
 
-# Elasticsearch 6.x
-elasticsearch>=6.0.0,<7.0.0
-
-# Flask
-flask
-
+Flask==2.3.2 
+Flask-Compress==1.13
+cachelib==0.10.2  
+gunicorn==20.1.0 
+requests==2.28.2
